[workspace]
members = [
    "crates/core",
    "crates/dao",
    "crates/gov",
    "crates/market",
    "crates/vc",
    "crates/auth",
    "crates/identity",
    "crates/reputation",
    "crates/intent",
    "crates/memory",
    "crates/validation",
    "crates/directory",
    "crates/marketplace",
    "crates/interop",
    "crates/agent_registry",
    "crates/inference_registry",
    "crates/job",
    "crates/bank",
    "crates/staking",
    "crates/upgrade",
    "crates/x402",
    "crates/gmp",
    "crates/evm",
    "crates/svm",
    "crates/cosmwasm",
    "crates/cctp",
    "crates/native",
    "crates/wasm",
    "examples",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/morpheum-labs/morpheum-sdk"
homepage = "https://morpheum.xyz"
keywords = ["blockchain", "morpheum", "sdk", "agent", "wallet"]
categories = ["cryptography", "api-bindings"]
readme = "README.md"

[workspace.dependencies]
# Core
morpheum-sdk-core = { path = "crates/core" }

# Canonical protobuf definitions (sibling repo)
morpheum-proto = { path = "../morpheum-proto", default-features = false }

# Signing (the official Morpheum signing library — local sibling repo)
morpheum-signing-core = { path = "../morpheum-signing/crates/core", default-features = false, features = ["std"] }
morpheum-signing-native = { path = "../morpheum-signing/crates/native", features = ["full"] }

# EVM interaction
morpheum-sdk-evm = { path = "crates/evm" }

# SVM (Solana) interaction
morpheum-sdk-svm = { path = "crates/svm" }

# CosmWasm contract interaction (on Morpheum)
morpheum-sdk-cosmwasm = { path = "crates/cosmwasm" }

# CCTP handler contract interaction (canonical types + typed queries)
morpheum-sdk-cctp = { path = "crates/cctp" }

# Shared dependencies
prost = { version = "0.14", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tonic = { version = "0.14", features = ["transport"] }
serde_json = "1.0"

# WASM-only
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tsify = { version = "0.4", features = ["js"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["Window", "Navigator", "console"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
