[package]
name = "morpheum-sdk-bank"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bank module client for the Morpheum SDK — transfers, cross-chain bridging, minting, deposits, withdrawals, and balance queries"

[lib]
crate-type = ["lib"]

[features]
default = []
std = [
    "morpheum-sdk-core/std",
    "morpheum-proto/std",
]
serde = [
    "dep:serde",
    "morpheum-sdk-core/serde",
    "morpheum-proto/serde",
]
full = ["std", "serde"]

[dependencies]
morpheum-sdk-core = { path = "../core", default-features = false }
morpheum-proto = { workspace = true }
prost = { version = "0.14", default-features = false }
async-trait = "0.1"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
