[package]
name = "morpheum-sdk-cosmwasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Morpheum SDK — CosmWasm contract interaction: builders for MsgExecuteContract, MsgInstantiateContract, MsgStoreCode, Warp Route transfers, and contract query helpers."

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
grpc = ["dep:tonic", "dep:tonic-prost", "dep:http", "dep:tracing", "serde"]
full = ["std", "serde", "grpc"]

[dependencies]
morpheum-sdk-core = { path = "../core", default-features = false }
morpheum-proto = { workspace = true }
prost = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

tonic = { version = "0.14", optional = true }
tonic-prost = { version = "0.14", optional = true }
http = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }

[lints.rust]
unsafe_code = "forbid"
