[package]
name = "morpheum-sdk-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Morpheum SDK — EVM contract interaction via alloy: sol! bindings for IERC20, HypERC20Collateral, X402Settlement, provider factory, and high-level bridge/x402 helpers."

[features]
default = ["std"]
std = []

[dependencies]
alloy = { version = "1", features = ["full"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
dirs-next = "2.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
too_many_arguments = "allow"
useless_conversion = "allow"
