[package]
name = "morpheum-sdk-market"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Market module client for the Morpheum SDK — create, activate, suspend, update markets, query market data & statistics, and manage full market lifecycle"

[lib]
crate-type = ["lib"]

[features]
default = []
# Enables std support (required when used from native crate)
std = [
    "morpheum-sdk-core/std",
    "morpheum-sdk-proto/std",
]
# Enables serde support for market types (e.g. Market, MarketParams, MarketStats)
serde = [
    "dep:serde",
    "morpheum-sdk-core/serde",
    "morpheum-sdk-proto/serde",
]
# Convenience feature for full std + serde
full = ["std", "serde"]

[dependencies]
# Core SDK foundation (types, config, transport, client trait, error, builder)
morpheum-sdk-core = { path = "../core", default-features = false }

# Generated protobuf definitions (market.v1, tx.v1, etc.)
morpheum-sdk-proto = { path = "../proto", default-features = false }

# Optional serialization (only enabled via "serde" feature)
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }