[package]
name = "morpheum-sdk-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Full native Rust SDK for Morpheum — CLI, bots, and autonomous agents. Includes all modules, signing, and transport layers (gRPC + HTTP)."

[lib]
crate-type = ["lib"]

[features]
default = ["full"]

# Full feature set — recommended for most users (all modules + transports)
full = [
    "market",
    "vc",
    "auth",
    "grpc",
    "http",
    "std",
]

# Individual modules (feature-gated for minimal builds)
identity = ["dep:morpheum-sdk-identity"]
market = ["dep:morpheum-sdk-market"]
vc = ["dep:morpheum-sdk-vc"]
auth = ["dep:morpheum-sdk-auth"]
agent_registry = ["dep:morpheum-sdk-agent-registry"]
inference_registry = ["dep:morpheum-sdk-inference-registry"]
interop = ["dep:morpheum-sdk-interop"]

# Transport backends
grpc = ["dep:tonic", "dep:tokio"]
http = ["dep:reqwest", "dep:tokio"]

# Enables std support across the SDK
std = [
    "morpheum-sdk-core/std",
    "morpheum-proto/std",
    "morpheum-sdk-identity?/std",
    "morpheum-sdk-market?/std",
    "morpheum-sdk-vc?/std",
    "morpheum-sdk-auth?/std",
    "morpheum-sdk-agent-registry?/std",
    "morpheum-sdk-inference-registry?/std",
    "morpheum-sdk-interop?/std",
]

[dependencies]
# Core SDK foundation
morpheum-sdk-core = { path = "../core", default-features = false }
morpheum-proto = { workspace = true }

# Module clients (optional via features)
morpheum-sdk-identity = { path = "../identity", optional = true, default-features = false }
morpheum-sdk-market = { path = "../market", optional = true, default-features = false }
morpheum-sdk-vc = { path = "../vc", optional = true, default-features = false }
morpheum-sdk-auth = { path = "../auth", optional = true, default-features = false }
morpheum-sdk-agent-registry = { path = "../agent_registry", optional = true, default-features = false }
morpheum-sdk-inference-registry = { path = "../inference_registry", optional = true, default-features = false }
morpheum-sdk-interop = { path = "../interop", optional = true, default-features = false }

# Official Morpheum signing library (native version with full crypto, BIP-39, claims)
morpheum-signing-native = { workspace = true }

# Async trait for Transport impl
async-trait = "0.1"

# Async runtime
tokio = { version = "1", optional = true, features = ["full"] }

# gRPC transport (tonic)
tonic = { version = "0.12", optional = true, features = ["tls", "tls-roots"] }

# HTTP transport (reqwest)
reqwest = { version = "0.12", optional = true, features = ["json", "rustls-tls"] }

# Common serialization (used by config and responses)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
