[package]
name = "morpheum-sdk-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Full native Rust SDK for Morpheum — CLI, bots, and autonomous agents. Includes all modules, signing, and transport layers (gRPC + HTTP)."

[lib]
crate-type = ["lib"]

[features]
default = ["full"]

# Full feature set — recommended for most users (all modules + transports)
full = [
    "market",
    "vc",
    "auth",
    "grpc",
    "http",
    "std",
]

# Individual modules (feature-gated for minimal builds).
# Each module activates its serde feature so response types are serializable.
identity = ["dep:morpheum-sdk-identity", "morpheum-sdk-identity?/serde"]
market = ["dep:morpheum-sdk-market", "morpheum-sdk-market?/serde"]
vc = ["dep:morpheum-sdk-vc", "morpheum-sdk-vc?/serde"]
auth = ["dep:morpheum-sdk-auth", "morpheum-sdk-auth?/serde"]
agentreg = ["dep:morpheum-sdk-agentreg", "morpheum-sdk-agentreg?/serde"]
inferreg = ["dep:morpheum-sdk-inferreg", "morpheum-sdk-inferreg?/serde"]
interop = ["dep:morpheum-sdk-interop", "morpheum-sdk-interop?/serde"]
job = ["dep:morpheum-sdk-job", "morpheum-sdk-job?/serde"]
bank = ["dep:morpheum-sdk-bank", "morpheum-sdk-bank?/serde"]
staking = ["dep:morpheum-sdk-staking", "morpheum-sdk-staking?/serde"]
reputation = ["dep:morpheum-sdk-reputation", "morpheum-sdk-reputation?/serde"]
validation = ["dep:morpheum-sdk-validation", "morpheum-sdk-validation?/serde"]
memory = ["dep:morpheum-sdk-memory", "morpheum-sdk-memory?/serde"]
intent = ["dep:morpheum-sdk-intent", "morpheum-sdk-intent?/serde"]
marketplace = ["dep:morpheum-sdk-marketplace", "morpheum-sdk-marketplace?/serde"]
directory = ["dep:morpheum-sdk-directory", "morpheum-sdk-directory?/serde"]
x402 = ["dep:morpheum-sdk-x402", "morpheum-sdk-x402?/serde"]
gmp = ["dep:morpheum-sdk-gmp", "morpheum-sdk-gmp?/serde"]
evm = ["dep:morpheum-sdk-evm"]
svm = ["dep:morpheum-sdk-svm"]
cosmwasm = ["dep:morpheum-sdk-cosmwasm", "morpheum-sdk-cosmwasm?/serde"]
ws = ["dep:morpheum-sdk-ws", "morpheum-sdk-ws?/serde"]

# Transport backends
grpc = ["dep:tonic", "dep:tokio", "dep:prost", "dep:http"]
http = ["dep:reqwest", "dep:tokio"]

# Enables std support across the SDK
std = [
    "morpheum-sdk-core/std",
    "morpheum-proto/std",
    "morpheum-sdk-identity?/std",
    "morpheum-sdk-market?/std",
    "morpheum-sdk-vc?/std",
    "morpheum-sdk-auth?/std",
    "morpheum-sdk-agentreg?/std",
    "morpheum-sdk-inferreg?/std",
    "morpheum-sdk-interop?/std",
    "morpheum-sdk-job?/std",
    "morpheum-sdk-bank?/std",
    "morpheum-sdk-staking?/std",
    "morpheum-sdk-gmp?/std",
]

[dependencies]
# Core SDK foundation
morpheum-sdk-core = { path = "../core", default-features = false }
morpheum-proto = { workspace = true }

# Module clients (optional via features)
morpheum-sdk-identity = { path = "../identity", optional = true, default-features = false }
morpheum-sdk-market = { path = "../market", optional = true, default-features = false }
morpheum-sdk-vc = { path = "../vc", optional = true, default-features = false }
morpheum-sdk-auth = { path = "../auth", optional = true, default-features = false }
morpheum-sdk-agentreg = { path = "../agentreg", optional = true, default-features = false }
morpheum-sdk-inferreg = { path = "../inferreg", optional = true, default-features = false }
morpheum-sdk-interop = { path = "../interop", optional = true, default-features = false }
morpheum-sdk-job = { path = "../job", optional = true, default-features = false }
morpheum-sdk-bank = { path = "../bank", optional = true, default-features = false }
morpheum-sdk-staking = { path = "../staking", optional = true, default-features = false }
morpheum-sdk-reputation = { path = "../reputation", optional = true, default-features = false }
morpheum-sdk-validation = { path = "../validation", optional = true, default-features = false }
morpheum-sdk-memory = { path = "../memory", optional = true, default-features = false }
morpheum-sdk-intent = { path = "../intent", optional = true, default-features = false }
morpheum-sdk-marketplace = { path = "../marketplace", optional = true, default-features = false }
morpheum-sdk-directory = { path = "../directory", optional = true, default-features = false }
morpheum-sdk-x402 = { path = "../x402", optional = true, default-features = false }
morpheum-sdk-gmp = { path = "../gmp", optional = true, default-features = false }
morpheum-sdk-evm = { path = "../evm", optional = true }
morpheum-sdk-svm = { path = "../svm", optional = true }
morpheum-sdk-cosmwasm = { path = "../cosmwasm", optional = true, default-features = false }
morpheum-sdk-ws = { path = "../ws", optional = true }

# Official Morpheum signing library (native version with full crypto, BIP-39, claims)
morpheum-signing-native = { workspace = true }

# Async trait for Transport impl
async-trait = "0.1"

# Async runtime
tokio = { version = "1", optional = true, features = ["full"] }

# gRPC transport (tonic)
tonic = { version = "0.14", optional = true, features = ["transport"] }

# Protobuf encoding (for GrpcTransport broadcast_tx decode/encode)
prost = { version = "0.14", optional = true, default-features = false }

# HTTP types (PathAndQuery for raw gRPC calls)
http = { version = "1", optional = true }

# HTTP transport (reqwest)
reqwest = { version = "0.12", optional = true, features = ["json", "rustls-tls"] }

# Common serialization (used by config and responses)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
