[package]
name = "morpheum-sdk-osa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Outcome Settlement Account (OSA) module client for the Morpheum SDK — per-outcome collateral, share trading, settlement, and payout claims for prediction markets"

[lib]
crate-type = ["lib"]

[features]
default = []
std = [
    "morpheum-sdk-core/std",
    "morpheum-proto/std",
]
serde = [
    "dep:serde",
    "morpheum-sdk-core/serde",
    "morpheum-proto/serde",
]
full = ["std", "serde"]

[dependencies]
morpheum-sdk-core = { path = "../core", default-features = false }
morpheum-proto = { workspace = true }
prost = { version = "0.14", default-features = false }
async-trait = "0.1"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
