[package]
name = "morpheum-sdk-svm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Morpheum SDK — SVM (Solana) contract interaction: Hyperlane Sealevel Warp Route, x402 settlement, provider factory, and chain configuration."

[features]
default = ["std"]
std = []

[dependencies]
morpheum-sdk-core = { workspace = true, features = ["chain-registry"] }
solana-sdk = "2.1"
solana-client = "2.1"
spl-token = { version = "7", default-features = false }
spl-associated-token-account = { version = "6", default-features = false, features = ["no-entrypoint"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
dirs-next = "2.0"
bs58 = "0.5"
borsh = { version = "1", features = ["derive"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
too_many_arguments = "allow"
