[package]
name = "morpheum-sdk-vc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "VC module client for the Morpheum SDK — issue, revoke, query, update, and manage Verifiable Credentials with full TradingKeyClaim support"

[lib]
crate-type = ["lib"]

[features]
default = []
# Enables std support (required when used from native crate)
std = [
    "morpheum-sdk-core/std",
    "morpheum-sdk-proto/std",
]
# Enables serde support for VC types (e.g. Vc, VcClaims, Vp)
serde = [
    "dep:serde",
    "morpheum-sdk-core/serde",
    "morpheum-sdk-proto/serde",
]
# Convenience feature for full std + serde
full = ["std", "serde"]

[dependencies]
# Core SDK foundation (types, config, transport, client trait, error, builder)
morpheum-sdk-core = { path = "../core", default-features = false }

# Generated protobuf definitions (vc.v1, tx.v1, etc.)
morpheum-sdk-proto = { path = "../proto", default-features = false }

# Optional serialization (only enabled via "serde" feature)
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }