[package]
name = "morpheum-sdk-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WASM + TypeScript bindings for the Morpheum SDK — browser support for React, Vue, Svelte, Next.js, and other web applications"

[lib]
crate-type = ["cdylib"]

[features]
default = ["full-wasm"]

std = []

# Full WASM feature set with panic hook and all module support
full-wasm = [
    "std",
    "console_error_panic_hook",
    "morpheum-sdk-core/wasm",
    "morpheum-sdk-core/serde",
    "morpheum-sdk-bucket/full",
    "morpheum-sdk-market?/full",
    "morpheum-sdk-vc?/full",
    "morpheum-sdk-auth?/full",
]

[dependencies]
# Core SDK foundation with WASM support
morpheum-sdk-core = { path = "../core", default-features = false, features = ["std"] }

# Module clients for typed builders
morpheum-sdk-bucket = { path = "../bucket", default-features = false }

# Feature-gated module clients (optional via features)
morpheum-sdk-market = { path = "../market", optional = true, default-features = false }
morpheum-sdk-vc = { path = "../vc", optional = true, default-features = false }
morpheum-sdk-auth = { path = "../auth", optional = true, default-features = false }

# Signing: shared WASM adapters + core TxBuilder
morpheum-signing-wasm-lib = { workspace = true }
morpheum-signing-core = { workspace = true, features = ["wasm", "dynamic-signer-info"] }

# Proto types for message encoding
morpheum-proto = { workspace = true }
prost = { workspace = true }

# Hashing & encoding
sha2 = "0.10"
hex = "0.4"

# WASM interop
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"

# Better panic messages in browser console (optional but enabled in full-wasm)
console_error_panic_hook = { version = "0.1", optional = true }

# WASM-specific: enable browser crypto support for transitive deps pulled in
# by morpheum-primitives (ed25519-dalek, k256, uuid).
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
